feat: Stop application endpoint working
