# internal/server/gen/restapi/operations/stop_app.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// StopAppHandlerFunc turns a function with the right signature into a stop app handler
+type StopAppHandlerFunc func(StopAppParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn StopAppHandlerFunc) Handle(params StopAppParams) middleware.Responder {
+	return fn(params)
+}
+
+// StopAppHandler interface for that can handle valid stop app params
+type StopAppHandler interface {
+	Handle(StopAppParams) middleware.Responder
+}
+
+// NewStopApp creates a new http.Handler for the stop app operation
+func NewStopApp(ctx *middleware.Context, handler StopAppHandler) *StopApp {
+	return &StopApp{Context: ctx, Handler: handler}
+}
+
+/*StopApp swagger:route POST /api/apps/{appName}/stop stopApp
+
+stop the application
+
+*/
+type StopApp struct {
+	Context *middleware.Context
+	Handler StopAppHandler
+}
+
+func (o *StopApp) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewStopAppParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
